# rdemo

./: Cargo.toml
cmd/restaurant-cli/: Cargo.toml
restaurant/: Cargo.toml
restaurant/src/: back_of_house.rs  front_of_house.rs  lib.rs
src/: bytes_test.rs  data_test.rs  enumeration_test.rs  err_handle_test.rs  generics_test.rs  hashmap_test.rs  lib.rs  lifetime_test.rs  owner_scope_test.rs  slice_test.rs  string_test.rs  struct_test.rs  trait_test.rs  vector_test.rs
tests/: inte_test.rs
yzy/: Cargo.toml
yzy/doc/: nested-message.eml
