[package]
name = "rdemo"
version = "0.1.0"
authors = ["陈濛 <chenmeng.yzy@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rdemo"

[dependencies]

[workspace]
members = [
    "cmd/restaurant-cli",
    "restaurant",
    "yzy",
]
# default-members = ["restaurant"]