[package]
name = "yzy"
version = "0.1.0"
authors = ["chenmeng <2786859763@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdemo = {path="../", default-features=false}
abnf = "0.12.0"
mail-builder = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
serde_json = "1.0.94"